prevent scroll bar from appearing on elements with class "wrap"

--- a/css/application.css
+++ b/css/application.css
@@ -41,7 +41,7 @@ header {
 }
 
 .wrap {
-  overflow: auto;
+  overflow: hidden;
   margin: 0 auto;
 }
 
